# mnemoria

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  MIGRATING_FROM_HONCHO.md  README.md  TASKS.md  pyproject.toml
benchmarks/: README.md
benchmarks/results/: v0.2.1.json
docs/: HANDOVER_hermes-agent-bugs.md  HANDOVER_plugin-lifecycle-implementation.md  ISSUE_1_on_pre_compress.md  ISSUE_2_on_turn_start.md  ISSUE_3_on_delegation_logging.md  WEAK_SPOTS.md
docs/superpowers/plans/: 2026-04-07-mempalace-hybrid-scoring.md  2026-04-10-hermes-plugin-lifecycle-hooks.md
docs/superpowers/specs/: 2026-04-10-hermes-plugin-lifecycle-hooks-design.md
mnemoria/: ARCHITECTURE.md  __init__.py  bandit.py  config.py  embeddings.py  encoding.py  events.py  export.py  ingestion.py  intent.py  lifecycle.py  links.py  migrate.py  promoter.py  qvalue_store.py  retrieval.py  schema.py  store.py  types.py
mnemoria/observers/: __init__.py  delegation.py  error_context.py  memory_write.py  tool_output.py  user_content.py  user_statement.py
mnemoria/scripts/: pending.py  retag_facts.py
tests/: test_basic.py  test_benchmark_regressions.py  test_continuous_extraction.py  test_events.py  test_migrate.py  test_observer_delegation.py  test_observer_error_context.py  test_observer_memory_write.py  test_observer_user_content.py  test_promoter.py  test_wave3_observers.py
