[project]
name = "mnemoria"
version = "0.1.0"
description = "Cognitive memory system for AI agents — ACT-R activation, typed facts, Hebbian links, RL reranking"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "Tranquil-Flow"}]
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# High-quality semantic embeddings via sentence-transformers (~80MB model download)
embeddings = ["sentence-transformers>=2.2.0"]
# Local embeddings via Ollama HTTP API (no Python deps, requires running ollama)
ollama = ["httpx>=0.24.0"]
# OpenAI embeddings API (requires OPENAI_API_KEY)
openai = ["openai>=1.0.0"]
# All embedding backends
all = [
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
]
# Development dependencies
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/Tranquil-Flow/mnemoria"
Repository = "https://github.com/Tranquil-Flow/mnemoria"
Documentation = "https://github.com/Tranquil-Flow/mnemoria#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["mnemoria/", "README.md", "LICENSE", "CHANGELOG.md", "CONTRIBUTING.md", "MIGRATING_FROM_HONCHO.md", "ACKNOWLEDGEMENTS.md"]

[tool.hatch.build.targets.wheel]
packages = ["mnemoria/"]
